Clock display no longer visibly changes colour

--- a/public/code/master.css
+++ b/public/code/master.css
@@ -99,7 +99,7 @@ header {
   width: 65vh;
   background-color: black;
   border-radius: 5vh;
-  transition: 0.75s;
+  transition: 0s;
   color: var(--themeColour);
 }
 
